--- a/templates/Main/index.html
+++ b/templates/Main/index.html
@@ -5,7 +5,7 @@
      <head>
       <meta charset="utf-8">
       <meta http-equiv="x-ua-compatible" content="ie=edge">
-      <title>Vindus E-store</title>
+      <title>QTipstore</title>
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <!-- Place favicon.ico in the root directory -->
