--- a/templates/cart/cart_detail.html
+++ b/templates/cart/cart_detail.html
@@ -335,7 +335,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="cta-item mb-30">
                             <h5 class="cta-title">Download App</h5>
-                            <p>VStore.</p>
+                            <p>Qtipstore.</p>
                             <div class="cta-apps">
                                 <div class="apps-store">
                                     <a href="#"><img src="{% static 'assets/img/brand/app_ios.png" alt=""></a>
