--- a/templates/includes/cta.html
+++ b/templates/includes/cta.html
@@ -32,7 +32,7 @@
             <div class="col-lg-4 col-md-6">
                 <div class="cta-item mb-30">
                     <h5 class="cta-title">Download App</h5>
-                    <p>VStore App is now available on App Store & Google Play. Get it now.</p>
+                    <p>QTipstore App is now available on App Store & Google Play. Get it now.</p>
                     <div class="cta-apps">
                         <div class="apps-store">
                             <a href="#"><img src="{% static 'assets/img/brand/app_ios.png' %}" alt=""></a>
